# university-practice

./: .gitignore  CMakeLists.txt  README.md
final/: 3.c
final_1/: 1.c  2.c
final_16/: 2.c  3.c
final_3/: 1.c  2.c  3.c
lab1/: 1.c  10.c  11.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
lab2/: 8.c  9.c
lab3/: 1.c  2_1.c  2_16.c  2_3.c
lab6/: 1.c  3.c
lab8/: 1.c  2.c  3.c  4.c  5.c
pr1/: 5.c
pr1_1/: 1.c  2.c  3.c  4.c
pr2_1/: 1.c  2.c  3.c
pr3/: 1.c  3.c  4.c
pr3_1/: 2.c  3.c
pr3_16/: 1.c  2.c  3.c  4.c
pr3_3/: 1.c  2.c  3.c  4.c
test/: 1.c
